--- a/client/style/screen.css
+++ b/client/style/screen.css
@@ -83,20 +83,20 @@ $fontBold:      "UniversLTStd-Bold";
 $fontItalic:    "UniversLTStd-MediumItalic";
 $fontBoldItalic:"UniversLTStd-BoldItalic";
 */
-/* line 39, ../sass/globals/_type.scss */
+/* line 41, ../sass/globals/_type.scss */
 html {
   font-family: "FuturaStd-Book", sans-serif;
   font-size: 10pt;
   letter-spacing: .5pt;
   line-height: 1.5em;
 }
-/* line 42, ../sass/globals/_type.scss */
+/* line 44, ../sass/globals/_type.scss */
 html a {
   color: #333333;
   text-decoration: none;
   border-bottom: 1px #aaaaaa solid;
 }
-/* line 50, ../sass/globals/_type.scss */
+/* line 52, ../sass/globals/_type.scss */
 html p + p {
   margin-top: 0.75rem;
 }
@@ -416,18 +416,20 @@ section.container section.space section.content {
 }
 /* line 68, ../sass/layout/_container.scss */
 section.container section.space section.content article {
-  max-width: 24rem;
+  max-width: 240rem;
   color: #333333;
   position: absolute;
   backface-visibility: hidden;
   background-color: transparent !important;
+  font-size: 120pt;
+  line-height: 1.5em;
 }
-/* line 75, ../sass/layout/_container.scss */
+/* line 77, ../sass/layout/_container.scss */
 section.container section.space section.content article textarea {
   width: 100%;
   height: 9rem;
 }
-/* line 80, ../sass/layout/_container.scss */
+/* line 82, ../sass/layout/_container.scss */
 section.container section.space section.content article .card {
   position: relative;
   background-color: rgba(255, 255, 255, 0.925);
@@ -440,19 +442,19 @@ section.container section.space section.content article .card {
   -o-transition-property: -o-transform, -webkit-transform, -moz-transform, box-shadow, -webkit-box-shadow, -moz-box-shadow, background-color;
   transition-property: transform, -webkit-transform, -moz-transform, box-shadow, -webkit-box-shadow, -moz-box-shadow, background-color;
 }
-/* line 84, ../sass/layout/_container.scss */
+/* line 86, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:hover, section.container section.space section.content article .card.rollover {
   cursor: move;
 }
-/* line 89, ../sass/layout/_container.scss */
+/* line 91, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:hover.text, section.container section.space section.content article .card.rollover.text {
   background-color: rgba(255, 255, 255, 0.96);
 }
-/* line 93, ../sass/layout/_container.scss */
+/* line 95, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:hover img, section.container section.space section.content article .card.rollover img {
   opacity: 1;
 }
-/* line 98, ../sass/layout/_container.scss */
+/* line 100, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:active, section.container section.space section.content article .card.dragging {
   -webkit-transform: rotate(-3deg);
   -moz-transform: rotate(-3deg);
@@ -461,38 +463,38 @@ section.container section.space section.content article .card:active, section.co
   transform: rotate(-3deg);
   cursor: move;
 }
-/* line 101, ../sass/layout/_container.scss */
+/* line 103, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:active.text, section.container section.space section.content article .card.dragging.text {
   background-color: rgba(255, 255, 255, 0.96);
 }
-/* line 105, ../sass/layout/_container.scss */
+/* line 107, ../sass/layout/_container.scss */
 section.container section.space section.content article .card:active img, section.container section.space section.content article .card.dragging img {
   opacity: 1;
 }
-/* line 110, ../sass/layout/_container.scss */
+/* line 112, ../sass/layout/_container.scss */
 section.container section.space section.content article .card.text {
-  padding: 0.125rem 1rem 0.125rem 0.25rem;
+  padding: 1.5rem 12rem 1.5rem 3rem;
 }
-/* line 114, ../sass/layout/_container.scss */
+/* line 116, ../sass/layout/_container.scss */
 section.container section.space section.content article .card.image {
   background-color: transparent;
 }
-/* line 119, ../sass/layout/_container.scss */
+/* line 121, ../sass/layout/_container.scss */
 section.container section.space section.content article .card.website p a {
   word-break: break-all;
 }
-/* line 124, ../sass/layout/_container.scss */
+/* line 126, ../sass/layout/_container.scss */
 section.container section.space section.content article .card.caption {
   left: 1rem;
   top: -1.5rem;
 }
-/* line 129, ../sass/layout/_container.scss */
+/* line 131, ../sass/layout/_container.scss */
 section.container section.space section.content article .card img {
   width: 100%;
   opacity: .9;
   margin-bottom: -12pt;
 }
-/* line 138, ../sass/layout/_container.scss */
+/* line 140, ../sass/layout/_container.scss */
 section.container section.space .delete {
   text-align: center;
   position: fixed;
@@ -512,12 +514,12 @@ section.container section.space .delete {
   -o-transform: scale(0.5);
   transform: scale(0.5);
 }
-/* line 150, ../sass/layout/_container.scss */
+/* line 152, ../sass/layout/_container.scss */
 section.container section.space .delete.visible {
   bottom: 0;
   opacity: 1;
 }
-/* line 155, ../sass/layout/_container.scss */
+/* line 157, ../sass/layout/_container.scss */
 section.container section.space .delete.rollover {
   -webkit-transform: scale(1.25);
   -moz-transform: scale(1.25);
@@ -527,7 +529,7 @@ section.container section.space .delete.rollover {
   opacity: 1;
   bottom: 0;
 }
-/* line 161, ../sass/layout/_container.scss */
+/* line 163, ../sass/layout/_container.scss */
 section.container section.space .delete:after {
   text-align: center;
   content: "×";
